Revert "Might fix it on mobile?"
This reverts commit aaa2c9b6116cffca3368c71445d4e05ef301f1e0.

--- a/assets/style/home.scss
+++ b/assets/style/home.scss
@@ -14,14 +14,12 @@ $background_color_2: transparent;
 @keyframes title-appear {
 	0% {
 /*font-size: 0;*/
-        width: 0%;
 		opacity: 0;
         transform: scale(0, 1);
         font-size: 0;
 	}
 	100% {
 /*font-size: initial;*/
-        width: 100%;
         font-size: 100%;
 		transform: scale(1, 1);
 		opacity: 1;
@@ -58,7 +56,7 @@ $background_color_2: transparent;
 .start-hid {
     visibility: visible;
     display: inline-block;
-    width: 0.1;
+    width: 0;
     opacity: 0;
     animation-name: title-appear;
     animation-delay: 1s;
